Master #2 change to Index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>
 <a id="scm-ninjagithubio" class="anchor" href="#scm-ninjagithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>scm-ninja.github.io</h1>
 
-<p>Trying out Pages</p>
+<p>Trying out Pages - changes to ddemonstrate Merging concepts</p>
 
       <footer class="site-footer">
 
